--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
       var loaderUrl = buildUrl + "/compilado-game.loader.js";
       var config = {
         arguments: [],
-        dataUrl: buildUrl + "/compilado-game.data.br",
-        frameworkUrl: buildUrl + "/compilado-game.framework.js.br",
-        codeUrl: buildUrl + "/compilado-game.wasm.br",
+        dataUrl: buildUrl + "/compilado-game.data",
+        frameworkUrl: buildUrl + "/compilado-game.framework.js",
+        codeUrl: buildUrl + "/compilado-game.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "MiRollABall",
